# vLLM-Inference

./: .env.example  README.md  docker-compose.yml  pyproject.toml
alloy/: alloy-config.river
api/: Dockerfile  requirements.txt
api/app/: auth.py  config.py  llm.py  logging_config.py  main.py  middleware.py  requirements.txt  schemas.py
grafana/provisioning/datasources/: datasources.yml
load_testing/: test.js
loki/: loki-config.yml
prometheus/: prometheus.yml
